--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -60,6 +60,7 @@ uses [ripgrep](https://github.com/BurntSushi/ripgrep) to search inside files
 - **case_sensitive:** whether the search is case sensitive
 - **follow_symlinks:** search inside symlinks as well
 - **no_ignore_parent:** do not respect ignore files from parent directories (e.g., `.gitignore`)
+- **search_hidden:** whether to search hidden files and directories
 
 ### poppler
 
