--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -25,10 +25,7 @@ description: config schema humanified
     - [1.17.2. Property `Rovr Config > interface > clock > align`](#interface_clock_align)
   - [1.18. Property `Rovr Config > interface > preview_text`](#interface_preview_text)
     - [1.18.1. Property `Rovr Config > interface > preview_text > error`](#interface_preview_text_error)
-    - [1.18.2. Property `Rovr Config > interface > preview_text > binary`](#interface_preview_text_binary)
-    - [1.18.3. Property `Rovr Config > interface > preview_text > start`](#interface_preview_text_start)
-    - [1.18.4. Property `Rovr Config > interface > preview_text > empty`](#interface_preview_text_empty)
-    - [1.18.5. Property `Rovr Config > interface > preview_text > too_large`](#interface_preview_text_too_large)
+    - [1.18.2. Property `Rovr Config > interface > preview_text > start`](#interface_preview_text_start)
   - [1.19. Property `Rovr Config > interface > compact_mode`](#interface_compact_mode)
     - [1.19.1. Property `Rovr Config > interface > compact_mode > buttons`](#interface_compact_mode_buttons)
     - [1.19.2. Property `Rovr Config > interface > compact_mode > panels`](#interface_compact_mode_panels)
@@ -276,6 +273,7 @@ description: config schema humanified
     - [8.5.4. Property `Rovr Config > plugins > rg > case_sensitive`](#plugins_rg_case_sensitive)
     - [8.5.5. Property `Rovr Config > plugins > rg > follow_symlinks`](#plugins_rg_follow_symlinks)
     - [8.5.6. Property `Rovr Config > plugins > rg > no_ignore_parent`](#plugins_rg_no_ignore_parent)
+    - [8.5.7. Property `Rovr Config > plugins > rg > search_hidden`](#plugins_rg_search_hidden)
   - [8.6. Property `Rovr Config > plugins > poppler`](#plugins_poppler)
     - [8.6.1. Property `Rovr Config > plugins > poppler > enabled`](#plugins_poppler_enabled)
     - [8.6.2. Property `Rovr Config > plugins > poppler > threads`](#plugins_poppler_threads)
@@ -570,13 +568,10 @@ Must be one of:
 | **Required**              | No          |
 | **Additional properties** | Not allowed |
 
-| Property                                       | Type   | Title/Description                                                                                                                                          |
-| ---------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [error](#interface_preview_text_error)         | string | If for any reason the file preview refused to show, this appears.                                                                                          |
-| [binary](#interface_preview_text_binary)       | string | If the current file cannot be read due to an encoding issue (ie not UTF8), it will display this message.                                                   |
-| [start](#interface_preview_text_start)         | string | This is shown when the rovr starts up. You may see it for a split second, but it will never appear afterwards. You cannot view this properly in this docs. |
-| [empty](#interface_preview_text_empty)         | string | If the current file has no content, this is shown                                                                                                          |
-| [too_large](#interface_preview_text_too_large) | string | If the file is too large (hard capped at &lt; 1MB), the preview will refuse to render this file regardless of your memory size                             |
+| Property                               | Type   | Title/Description                                                                                                                                          |
+| -------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [error](#interface_preview_text_error) | string | If for any reason the file preview refused to show, this appears.                                                                                          |
+| [start](#interface_preview_text_start) | string | This is shown when the rovr starts up. You may see it for a split second, but it will never appear afterwards. You cannot view this properly in this docs. |
 
 #### <a name="interface_preview_text_error"></a>1.18.1. Property `Rovr Config > interface > preview_text > error`
 
@@ -588,17 +583,7 @@ Must be one of:
 
 **Description:** If for any reason the file preview refused to show, this appears.
 
-#### <a name="interface_preview_text_binary"></a>1.18.2. Property `Rovr Config > interface > preview_text > binary`
-
-|              |                                                            |
-| ------------ | ---------------------------------------------------------- |
-| **Type**     | `string`                                                   |
-| **Required** | No                                                         |
-| **Default**  | `"the file does not use UTF-8, which isn't supported yet"` |
-
-**Description:** If the current file cannot be read due to an encoding issue (ie not UTF8), it will display this message.
-
-#### <a name="interface_preview_text_start"></a>1.18.3. Property `Rovr Config > interface > preview_text > start`
+#### <a name="interface_preview_text_start"></a>1.18.2. Property `Rovr Config > interface > preview_text > start`
 
 |              |                                                                                                                                      |
 | ------------ | ------------------------------------------------------------------------------------------------------------------------------------ |
@@ -607,26 +592,6 @@ Must be one of:
 | **Default**  | `" ___ ___\n&#124;  _&#124; . &#124;\n&#124;_&#124; &#124;___&#124;\n _ _ ___\n&#124; &#124; &#124;  _&#124;\n \\_/&#124;_&#124;\n"` |
 
 **Description:** This is shown when the rovr starts up. You may see it for a split second, but it will never appear afterwards. You cannot view this properly in this docs.
-
-#### <a name="interface_preview_text_empty"></a>1.18.4. Property `Rovr Config > interface > preview_text > empty`
-
-|              |                          |
-| ------------ | ------------------------ |
-| **Type**     | `string`                 |
-| **Required** | No                       |
-| **Default**  | `"bytes be gone (⌐■_■)"` |
-
-**Description:** If the current file has no content, this is shown
-
-#### <a name="interface_preview_text_too_large"></a>1.18.5. Property `Rovr Config > interface > preview_text > too_large`
-
-|              |                                                           |
-| ------------ | --------------------------------------------------------- |
-| **Type**     | `string`                                                  |
-| **Required** | No                                                        |
-| **Default**  | `"this file is larger (but not larger than your mother)"` |
-
-**Description:** If the file is too large (hard capped at &lt; 1MB), the preview will refuse to render this file regardless of your memory size
 
 ### <a name="interface_compact_mode"></a>1.19. Property `Rovr Config > interface > compact_mode`
 
@@ -4103,6 +4068,7 @@ Must be one of:
 | [case_sensitive](#plugins_rg_case_sensitive)     | boolean         | Whether the search should be case sensitive by default.      |
 | [follow_symlinks](#plugins_rg_follow_symlinks)   | boolean         | Whether rg should follow symlinks when searching.            |
 | [no_ignore_parent](#plugins_rg_no_ignore_parent) | boolean         | Don't use \*ignore files from parent folders when searching. |
+| [search_hidden](#plugins_rg_search_hidden)       | boolean         | Whether to search hidden files by default.                   |
 
 #### <a name="plugins_rg_enabled"></a>8.5.1. Property `Rovr Config > plugins > rg > enabled`
 
@@ -4160,7 +4126,7 @@ Must be one of:
 | ------------ | --------- |
 | **Type**     | `boolean` |
 | **Required** | No        |
-| **Default**  | `false`   |
+| **Default**  | `true`    |
 
 **Description:** Whether the search should be case sensitive by default.
 
@@ -4183,6 +4149,16 @@ Must be one of:
 | **Default**  | `false`   |
 
 **Description:** Don't use \*ignore files from parent folders when searching.
+
+#### <a name="plugins_rg_search_hidden"></a>8.5.7. Property `Rovr Config > plugins > rg > search_hidden`
+
+|              |           |
+| ------------ | --------- |
+| **Type**     | `boolean` |
+| **Required** | No        |
+| **Default**  | `false`   |
+
+**Description:** Whether to search hidden files by default.
 
 ### <a name="plugins_poppler"></a>8.6. Property `Rovr Config > plugins > poppler`
 
