fix: better type indication + remove async cwdobject

--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -1058,7 +1058,7 @@ Must be one of:
 
 | Property                                         | Type    | Title/Description                                                                                                                                    |
 | ------------------------------------------------ | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [name](#custom_theme_items_name)                 | string  | A name for the theme. However, when the theme is available in the theme picker, it shows up as a hiphenated, lowercase version.                      |
+| [name](#custom_theme_items_name)                 | string  | A name for the theme. However, when the theme is available in the theme picker, it shows up as a hyphenated, lowercase version.                      |
 | [primary](#custom_theme_items_primary)           | string  | A hex code or named color to use as the primary color. Refer to https://textual.textualize.io/css_types/color/#named-colors for the named colors.    |
 | [secondary](#custom_theme_items_secondary)       | string  | A hex code or named color to use as the secondary color. Refer to https://textual.textualize.io/css_types/color/#named-colors for the named colors.  |
 | [warning](#custom_theme_items_warning)           | string  | A hex code or named color to use as the warning color. Refer to https://textual.textualize.io/css_types/color/#named-colors for the named colors.    |
@@ -1080,7 +1080,7 @@ Must be one of:
 | **Type**     | `string` |
 | **Required** | Yes      |
 
-**Description:** A name for the theme. However, when the theme is available in the theme picker, it shows up as a hiphenated, lowercase version.
+**Description:** A name for the theme. However, when the theme is available in the theme picker, it shows up as a hyphenated, lowercase version.
 
 #### <a name="custom_theme_items_primary"></a>6.1.2. Property `Rovr Config > custom_theme > custom_theme items > primary`
 
