--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -279,6 +279,7 @@ description: config schema humanified
     - [8.6.2. Property `Rovr Config > plugins > poppler > threads`](#plugins_poppler_threads)
     - [8.6.3. Property `Rovr Config > plugins > poppler > use_pdftocairo`](#plugins_poppler_use_pdftocairo)
     - [8.6.4. Property `Rovr Config > plugins > poppler > poppler_folder`](#plugins_poppler_poppler_folder)
+    - [8.6.4. Property `Rovr Config > plugins > poppler > pdf_batch_size`](#plugins_poppler_pdf_batch_size)
   - [8.7. Property `Rovr Config > plugins > file_one`](#plugins_file_one)
     - [8.7.1. Property `Rovr Config > plugins > file_one > enabled`](#plugins_file_one_enabled)
     - [8.7.2. Property `Rovr Config > plugins > file_one > get_description`](#plugins_file_one_get_description)
@@ -4174,6 +4175,7 @@ Must be one of:
 | [threads](#plugins_poppler_threads)               | integer | How many threads should poppler use?                                                               |
 | [use_pdftocairo](#plugins_poppler_use_pdftocairo) | boolean | Use pdftocairo instead of pdftoppm, may help performance                                           |
 | [poppler_folder](#plugins_poppler_poppler_folder) | string  | Path to the folder where Poppler-related binaries are located. Leave empty to use the system PATH. |
+| [pdf_batch_size](#plugins_poppler_pdf_batch_size) | integer | How many pages of pdf file to load in one go                                                       |
 
 #### <a name="plugins_poppler_enabled"></a>8.6.1. Property `Rovr Config > plugins > poppler > enabled`
 
@@ -4218,6 +4220,16 @@ Must be one of:
 | **Default**  | `""`     |
 
 **Description:** Path to the folder where Poppler-related binaries are located. Leave empty to use the system PATH.
+
+#### <a name="plugins_poppler_pdf_batch_size"></a>8.6.4. Property `Rovr Config > plugins > poppler > pdf_batch_size`
+
+|              |          |
+| ------------ | -------- |
+| **Type**     | `integer`|
+| **Required** | Yes      |
+| **Default**  | `2`     |
+
+**Description:** How many pages of pdf file to load in one go
 
 ### <a name="plugins_file_one"></a>8.7. Property `Rovr Config > plugins > file_one`
 
